changes in index.html

--- a/quiz_project/templates/index.html
+++ b/quiz_project/templates/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h3> This is the home page.</h3>
+<h1>Changes done by Riya.</h1>
 <ol>
     <h3>Tasks</h3>
     <li>Profile page</li>
