--- a/quiz_project/templates/index.html
+++ b/quiz_project/templates/index.html
@@ -7,6 +7,7 @@
 <body>
 <h3> This is the home page.</h3>
 <h1>Changes done by Riya.</h1>
+<h1>Changes done by Bharat.</h1>
 <ol>
     <h3>Tasks</h3>
     <li>Profile page</li>
