--- a/quiz_project/templates/about.html
+++ b/quiz_project/templates/about.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>  About us
-  </title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>About Us</title>
 </head>
-
-
 <body>
-<h1>
-    ABOUT US
-  </h1>
-<h3>
-  MEMBERS
-</h3>
-
-  <p>
-    Aryan <br>
-    Riya  <br>
-    Priyanshi  <br>
-    Bharat
-  </p>
+<h3>Team Members</h3>
+<ol>
+  <li>Aryan</li>
+  <li>Bharat</li>
+  <li>Priyanshi</li>
+  <li>Riya</li>
+</ol>
+<a href="{% url 'home' %}">Click to go back home</a>
 </body>
+</html>
