Html, Css, Js, Python everything updated.
Too much to describe.

--- a/quiz_project/templates/about.html
+++ b/quiz_project/templates/about.html
@@ -8,13 +8,13 @@
     <title>About Us</title>
 </head>
 <body>
-<h3>Team Members</h3>
-<ol>
-  <li>Aryan</li>
-  <li>Bharat</li>
-  <li>Priyanshi</li>
-  <li>Riya</li>
-</ol>
-<a href="{% url 'home' %}">Click to go back home</a>
+    <h3>Team Members</h3>
+    <ol>
+      <li>Aryan</li>
+      <li>Bharat</li>
+      <li>Priyanshi</li>
+      <li>Riya</li>
+    </ol>
+    <a href="{% url 'task' %}">Click to go back home</a>
 </body>
 </html>
