Login and SignUp

--- a/quiz_project/templates/index.html
+++ b/quiz_project/templates/index.html
@@ -44,6 +44,9 @@
 </details>
 
 <h2 style="color:red">If you are on this page, then you must remember database banana hai abhi...</h2>
+</body>
 
+<body>
+    <a href="C:\Users\Dell\Documents\GitHub\Quizz\quiz_project\templates\Login.html">LOGIN PAGE</a> 
 </body>
 </html>
