--- a/quiz_project/templates/Login.html
+++ b/quiz_project/templates/Login.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
     <div class="loginbox">
-        <img src="C:\Users\Dell\Documents\GitHub\Quizz\quiz_project\templates\Images\avatar.png" class="avatar">  
+        <img src="../static/images/avatar.png" class="avatar">
         <h1>Login Here</h1>
         <form>
             <p>Username</p>
