Functionality of surprise button added back

--- a/quiz_project/templates/index.html
+++ b/quiz_project/templates/index.html
@@ -46,7 +46,11 @@
     <div id="warning">
         <button onclick="warn()">BACK 🤣 😒🤔</button>
 
-<h2 style="color:red">If you are on this page, then you must remember database banana hai abhi...</h2>
+        <h2 style="color:red">If you are on this page, then you must remember database banana hai abhi...</h2>
+        <h2>Schema</h2>
+        <img src="../static/images/schema.jpg">
+    </div>
 
+    <script type="text/javascript" src="{% static 'js/index.js'%}"></script>
 </body>
 </html>
