--- a/quiz_project/templates/about.html
+++ b/quiz_project/templates/about.html
@@ -1,20 +1,50 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <title>About Us</title>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Us</title>
+    {% load static %}
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <script src="https://kit.fontawesome.com/289cfe2cd9.js" crossorigin="anonymous"></script> 
+   
+    <!-- {% load static %} -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/aboutStyle.css' %}">
 </head>
 <body>
-    <h3>Team Members</h3>
-    <ol>
-      <li>Aryan</li>
-      <li>Bharat</li>
-      <li>Priyanshi</li>
-      <li>Riya</li>
-    </ol>
-    <a href="{% url 'task' %}">Click to go back home</a>
+  <div class="section">
+    <div class="container">
+      <div class="title">
+        <h1>About Us</h1>
+      </div>
+        <div class="content">
+          <div class="article">
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque qui inventore, sint exercitationem aperiam obcaecati totam, possimus iste adipisci molestias ipsam delectus vitae soluta, 
+              fuga voluptates quam! Incidunt, possimus. Illum?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non sunt ab incidunt nostrum perspiciatis, 
+              autem pariatur velit ex nemo porro aliquid ea sed laudantium optio quidem magni vero recusandae vitae. 
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non sunt ab incidunt nostrum perspiciatis, 
+              autem pariatur velit ex nemo porro aliquid ea sed laudantium optio quidem magni vero recusandae vitae. 
+            </p>
+            <div class="button">
+              <a href="">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="image-section">
+          <img src="../static/images/neonabout2.jpg">
+        </div>
+        <div class="social">
+          
+          <a href=""><i class="fab fa-facebook-f"></i></a>
+          <a href=""><i class="fab fa-twitter"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+    
 </body>
 </html>
+
