--- a/quiz_project/templates/index.html
+++ b/quiz_project/templates/index.html
@@ -21,7 +21,7 @@
     </ul>
 
     <div id="upper">
-        <h1> This is the Task Page now, click HOME </h1>
+        <h1> Welcome {{user}}, this is the Dashboard now </h1>
 
         <!--
         <ol>
