--- a/quiz_project/templates/about.html
+++ b/quiz_project/templates/about.html
@@ -13,7 +13,7 @@
     <!-- {% load static %} -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/aboutStyle.css' %}">
 </head>
-<body>
+<div>
   <div class="section">
     <div class="container">
       <div class="title">
@@ -21,12 +21,12 @@
       </div>
         <div class="content">
           <div class="article">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque qui inventore, sint exercitationem aperiam obcaecati totam, possimus iste adipisci molestias ipsam delectus vitae soluta, 
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque qui inventore, sint exercitationem aperiam obcaecati totam, possimus iste adipisci molestias ipsam delectus vitae soluta,
               fuga voluptates quam! Incidunt, possimus. Illum?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non sunt ab incidunt nostrum perspiciatis, 
-              autem pariatur velit ex nemo porro aliquid ea sed laudantium optio quidem magni vero recusandae vitae. 
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non sunt ab incidunt nostrum perspiciatis, 
-              autem pariatur velit ex nemo porro aliquid ea sed laudantium optio quidem magni vero recusandae vitae. 
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non sunt ab incidunt nostrum perspiciatis,
+              autem pariatur velit ex nemo porro aliquid ea sed laudantium optio quidem magni vero recusandae vitae.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non sunt ab incidunt nostrum perspiciatis,
+              autem pariatur velit ex nemo porro aliquid ea sed laudantium optio quidem magni vero recusandae vitae.
             </p>
             <div class="button">
               <a href="">Read More</a>
@@ -37,41 +37,14 @@
           <img src="../static/images/neonabout2.jpg">
         </div>
         <div class="social">
-          
+
           <a href=""><i class="fab fa-facebook-f"></i></a>
           <a href=""><i class="fab fa-twitter"></i></a>
           <a href=""><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
-    
-=======
-    <link rel="stylesheet" type="text/css" href="css/aboutStyle.css"> 
-    <title>About Us</title>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/aboutStyle.css' %}">
-</head>
-<body>
-  <img src="../static/images/about.png">
-    <div class="wrapper">
-      <div class="row">
-        <div class="image-section">
-          
-        </div>
-        <div class="content">
-          <h1>About Us</h1>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non sunt ab incidunt nostrum perspiciatis, 
-            autem pariatur velit ex nemo porro aliquid ea sed laudantium optio quidem magni vero recusandae vitae. 
-          </p>
-          <div class="button">
-            <a href="">Read more</a>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <a href="{% url 'task' %}">Click to go back home</a>
->>>>>>> Stashed changes
+</div>
 </body>
 </html>
 
