--- a/quiz_project/templates/index.html
+++ b/quiz_project/templates/index.html
@@ -19,13 +19,18 @@
       <li><a href="{% url 'home' %}">HOME</a></li>
       <li><a href="#">QUIZ</a></li>
       <li><a href="#">LEADERBOARD</a></li>
+      <li><a href="{% url 'delete' user.id %}">Delete User</a></li>
       <li style="float: right">
         <a href="{% url 'about' %}" class="button" class="active">ABOUT</a>
       </li>
     </ul>
-
+    {% if  messages%}
+     {% for message in messages %}
+        <h3>{{message}}</h3>
+     {% endfor %}
+    {% endif %}
     <div id="upper">
-      <h1>Welcome {{user}}, this is the Dashboard now</h1>
+      <h1>Welcome {{user.first_name}} {{user.last_name}}, this is the Dashboard now</h1>
 
       <!--
         <ol>
