--- a/quiz_project/static/css/style.css
+++ b/quiz_project/static/css/style.css
@@ -1,153 +1,197 @@
-body{
-    margin: 0;
-    padding: 0;
-    background-image: url('../images/LoginBg.jpg');
-    background-size: cover;
-    background-position: center;
-    font-family: sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Cabin", sans-serif;
+}
+.splash {
+  top: 0;
+  left: 0;
+  position: absolute;
+  /* background:url(assets/images/home4.webp);*/
+  z-index: 200;
+}
+.splash.display-none {
+  top: 0;
+  left: 0;
+  position: fixed;
+  background: url(../static/images/home1.webp);
+  z-index: -10;
+}
+.beforesplash img {
+  width: 1350px;
+  height: 650px;
+}
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 3s ease-in forwards;
+}
+nav {
+  background: #02010f;
+  padding: 5px 20px;
+  display: flex;
+  align-items: center;
+}
+nav a {
+  text-decoration: none;
+  color: #fff;
+}
+nav a:hover {
+  color: #6666ff;
+}
+.logo {
+  flex: 1;
+}
+.logo a {
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+}
+.logo img {
+  width: 83px;
+  margin-right: 10px;
+}
+.logo a:hover {
+  color: #6666ff;
+}
+.menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+.menu li {
+  padding: 15px 10px;
+  font-size: 20px;
+  text-decoration: none;
+}
+.toggle {
+  font-size: 30px;
+  display: none;
+}
+.bgimg img {
+  width: 1350px;
+  height: 780px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+}
+footer {
+  margin-top: 220px;
+  position: absolute;
+  width: 100%;
+  background: #3498db;
+  height: 180px;
+}
+footer .social_icons {
+  top: 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+footer .social_icons li {
+  list-style: none;
+  margin: 24px 0;
+  padding: 8px;
+}
+footer .social_icons li a {
+  font-size: 2em;
+  color: #f3f7f8;
+  padding-top: 10px;
+  margin: 10px 0;
+  display: inline block;
+  transition: 0.5s;
+}
+footer .social_icons li a:hover {
+  color: #182e60;
+  transform-origin: translateY(-12px);
+}
+footer p {
+  color: #f3f7f8;
+  text-align: center;
+  margin-top: 0;
+  padding: 0 10px;
+  font-size: 24px;
+}
+footer .wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url(../static/images/wave.png);
+  display: flex;
+  background-size: 1000px 100px;
+}
+footer .wave#wave1 {
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWave 3s linear infinite;
+}
+footer .wave#wave2 {
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animateWave_02 4s linear infinite;
+}
+footer .wave#wave3 {
+  z-index: 900;
+  opacity: 0.2;
+  bottom: 18px;
+  animation: animateWave 5s linear infinite;
+}
+footer .wave#wave4 {
+  z-index: 800;
+  opacity: 0.7;
+  bottom: 22px;
+  animation: animateWave_02 2s linear infinite;
+}
+@keyframes animateWave {
+  0% {
+    background-position-x: 1000px;
+  }
+  100% {
+    background-position-x: 0px;
+  }
+}
+@keyframes animateWave_02 {
+  0% {
+    background-position-x: 0px;
+  }
+  100% {
+    background-position-x: 1000px;
+  }
 }
 
-.loginbox{
-    width: 420px;
-    height: 420px;
-    background: #000;
-    top: 50%;
-    left: 50%;
-    position:absolute;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    padding: 70px 30px;
-    border-radius: 10%;
-}
-
-.avatar{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+@media screen and (max-width: 600px) {
+  nav {
+    display: block;
+    position: relative;
+    padding: 15px 20px;
+  }
+  .menu {
+    margin-top: 15px;
+    display: none;
+  }
+  .menu.active,
+  .toggle {
+    display: block;
+  }
+  .toggle {
     position: absolute;
-    top: -50px;
-    left: calc(50% - 50px);
+    top: 15px;
+    right: 20px;
+  }
 }
-h1{
-    margin: 0;
-    padding: 0 0 20px;
-    text-align: center;
-    font-size: 22px;
-    color: rgb(244, 249, 246);
-}
-
-.loginbox p{
-    margin: 0;
-    padding: 0;
-    font-weight: bold;
-}
-.loginbox input{
-    width: 100%;
-    margin-bottom: 20px;
-}
-.loginbox input[type="text"], input[type="password"]
-{
-    border: none;
-    border-bottom: 1px solid #fff;
-    background: transparent;
-    outline: none;
-    height: 40px;
-    color: #fff;
-    font-size: 16px;
-}
-.loginbox input[type="submit"]
-{
-    border: none;
-    outline: none;
-    height: 40px;
-    background: #fb2525;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 20px;
-}
-.loginbox input[type="submit"]:hover
-{
-    cursor: pointer;
-    background: #ffc107;
-    color: #000;
-}
-.loginbox a{
-    text-decoration: none;
-    font-size: 12px;
-    line-height: 20px;
-    color: darkgrey;
-}
-.loginbox a:hover
-{
-    color: #ffc107;
-}
-
-.signup-box{
-    width: 25%;
-    height: 650px;
-    padding: 20px 40px;
-    margin: auto;
-    background-color: black;
-    color:white;
-    border-radius: 3px;
-    margin-top: 10px;
-}
-h1{
-    text-align: center;
-    padding-top: 15px;
-    color: rgb(165, 124, 124);
-}
-h4{
-    text-align: center;
-}
-#submitForm{
-    width: 300px;
-    margin-left: 20px;
-}
-#submitForm label{
-    display: flex;
-    margin-top: 20px;
-    font-size: 18px;
-}
-form input, #submitForm input{
-    width: 100%;
-    padding: 7px;
-    border: none;
-    border-bottom: 1px solid white;
-    border-radius: 6px;
-    outline: none;
-}
-#submitForm input[type="button"]{
-    width: 320px;
-    height: 35px;
-    margin-top: 20px;
-    border: none;
-    background-color: #089a76;
-    color: #fff;
-    font-size: 18px;
-}
-#submitForm p, p{
-    text-align: center;
-    padding-top: 20px;
-    font-size: 15px;
-}
-
-.para-2{
-    text-align: center;
-    color: white;
-    font-size: 15px;
-    margin-top: -10px;
-}
-
-.para-2 a{
-    color: #49c1a2;
-}
-
-
-
-
-
-
-
-
-
