--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -1,50 +1,100 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-</head>
-<body>
-    <div class="loginbox">
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home Page | Quizz</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
 
-        <img src="../static/images/avatar.png" class="avatar">
-        <h1>Login Here</h1>
+    <!--{% load static %}-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/style.css' %}"
+    />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
 
-    <form id="submitForm" action="{% url 'home' %}" method="post">
-        {% csrf_token %}
-
-        {% if  messages%}
-        {% for message in messages %}
-        <h3 style="color:white;">{{message}}</h3>
-        {% endfor %}
-        {% endif %}
-<!--        <label for="username">Username</label>-->
-        <input id="email"  name="email" type="email" placeholder="Enter email" required>
-<!--        <label for="password">Password</label>-->
-        <input id="password"  name="password" type="password" placeholder="Enter password" required>
-        <input type="submit" value="Login" >
-        <a href="#">Lost your password?</a><br>
-        <a href="#">Don't have an account?</a>
-
-    </form>
-    <p class="para-2">Not have an account? <a href="{% url 'sign-up' %}">Sign Up Here</a></p>
-    <p class="para-2">Email -- > test1@gmail.com</p>
-    <p class="para-2">Password -- > bharatpro1</p>
-
+    <!-- for splash screen
+    <div class="splash">
+       <img class="fade-in" src="assets/images/home1.jpg">
     </div>
-    <details>
-            This page will act both as home_page as well as login/sign-up page. Front-End waalo you can divide this page
-            in two parts and plan accordingly...
-            <br>
-            Login/Sign-Up button<br>
-            Login form --> Username Box, Password Box, Forget Password, Login/Done button<br>
-            Sign-Up form --> First Name, Last Name, Email, Password, Confirm Password<br>
-            Username will be automatically assigned.
-    </details>
-</body>
+  <!--splash ends-->
+  </head>
+
+  <body>
+    <div class="beforesplash">
+      <img src="../static/images/home1.webp" />
+    </div>
+
+    <div class="splash">
+      <div class="fade-in">
+        <!-- for nav bar -->
+        <nav>
+          <div class="logo">
+            <a href="home.html"
+              ><img src="../static/images/logo1.jpg" alt="logo" />Quizz</a
+            >
+          </div>
+
+          <div class="toggle">
+            <a href="#"><ion-icon name="menu-outline"></ion-icon></a>
+          </div>
+          <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Quizz</a></li>
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </nav>
+        <!-------nav ends---------->
+
+        <div class="bgimg">
+          <img src="../static/images/home2.jpg" />
+        </div>
+      </div>
+    </div>
+
+    <script type="text/javascript" src="{% static 'js/home.js'%}"></script>
+  </body>
+  <!--footer starts---->
+  <footer>
+    <!--<div class="splash">
+    <div class="fade-in">-->
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+      <ul class="social_icons">
+        <li>
+          <a href="https://www.facebook.com"
+            ><ion-icon name="logo-facebook"></ion-icon
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com"
+            ><ion-icon name="logo-twitter"></ion-icon
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com"
+            ><ion-icon name="logo-linkedin"></ion-icon
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com"
+            ><ion-icon name="logo-instagram"></ion-icon
+          ></a>
+        </li>
+      </ul>
+      <p>
+        <ion-icon name="at-outline">2022</ion-icon>2022 | Quizz | All Rights
+        Reserved
+      </p>
+    </div>
+  </footer>
+  <!--footer ends--->
 </html>
