--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -3,17 +3,14 @@
   <head>
     <title>Home Page | Quizz</title>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width" />
 
     <!--{% load static %}-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'css/style.css' %}"
-    />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <script
       type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+      src=" https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "
     ></script>
 
     <!-- for splash screen
@@ -33,8 +30,8 @@
         <!-- for nav bar -->
         <nav>
           <div class="logo">
-            <a href="home.html"
-              ><img src="../static/images/logo1.jpg" alt="logo" />Quizz</a
+            <a href="home.html">
+              <img src="../static/images/logo1.jpg" alt="logo" />Quizz</a
             >
           </div>
 
@@ -57,7 +54,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="{% static 'js/home.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
   </body>
   <!--footer starts---->
   <footer>
