--- a/quiz_project/static/css/style.css
+++ b/quiz_project/static/css/style.css
@@ -23,9 +23,8 @@ body {
   z-index: -10;
 }
 .beforesplash img {
-  width: 10px;
-  /*width: 1350px;
-  height: 650px;*/
+  width: 1350px;
+  height: 650px;
 }
 @keyframes fadeIn {
   to {
