home.html configured

--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -77,7 +77,7 @@
         <p class="para-2">
           Not have an account? <a href="{% url 'sign-up' %}">Sign Up Here</a>
         </p>
-        <p class="para-2">Email -- > test1@gmail.com</p>
+        <p class="para-2">Email -- > test@gmail.com</p>
         <p class="para-2">Password -- > bharatpro1</p>
       </div>
     </div>
