--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -34,7 +34,7 @@
           </div>
           <ul class="menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="{% url 'about' %}">About Us</a></li>
             <li><a href="#">Quizz</a></li>
             <li><a href="#">Dashboard</a></li>
             <li><a href="#">Contact Us</a></li>
