--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -24,7 +24,7 @@
         <!-- for nav bar -->
         <nav>
           <div class="logo">
-            <a href="home.html">
+            <a href="{% url 'home' %}">
               <img src="../static/images/logo1.jpg" alt="logo" />Quizz</a
             >
           </div>
@@ -33,7 +33,7 @@
             <a href="#"><ion-icon name="menu-outline"></ion-icon></a>
           </div>
           <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About Us</a></li>
             <li><a href="#">Quizz</a></li>
             <li><a href="#">Dashboard</a></li>
@@ -46,7 +46,7 @@
           <img src="../static/images/home2.jpg" />
         </div>
       </div>
-      <!--    </div>-->
+      <!--    </div> for form-->
       <div class="loginbox">
         <img src="../static/images/avatar.png" class="avatar" />
         <h1>Login Here</h1>
@@ -62,7 +62,7 @@
             placeholder="Enter email"
             required
           />
-          <!--        <label for="password">Password</label>-->
+          <!--<label for="password">Password</label>-->
           <input
             id="password"
             name="password"
@@ -79,10 +79,13 @@
         </p>
         <p class="para-2">Email -- > test@gmail.com</p>
         <p class="para-2">Password -- > bharatpro1</p>
+
+        <!--form ends-->
       </div>
     </div>
     <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
   </body>
+
   <!--footer starts---->
   <footer>
     <!--<div class="splash">
