--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -44,9 +44,33 @@
 
         <div class="bgimg">
           <img src="../static/images/home2.jpg" />
-        </div>
+        <!--form starts-->
+        <div class="loginbox">
+         <h1>Login Here</h1>
+          <form id="submitForm" action="{% url 'home' %}" method="post">
+            {% csrf_token %}
+            {% if  messages%}
+            {% for message in messages %}
+  <h3 style="color:white;">{{message}}</h3>
+ {% endfor %}
+  {% endif %}
+ <label for="username">Username</label>
+  <input id="email"  name="email" type="email" placeholder="Enter email" required>
+<label for="password">Password</label>
+  <input id="password"  name="password" type="password" placeholder="Enter password" required>
+  <input type="submit" value="Login" >
+  <a href="#">Lost your password?</a><br>
+</form>
+<p class="para-2">Not have an account? <a href="{% url 'sign-up' %}">Sign Up Here</a></p>
+<p class="para-2">Email -- > test1@gmail.com</p>
+<p class="para-2">Password -- > bharatpro1</p>
+</div>
+<!--form ends--->
+
       </div>
-      <!--    </div> for form-->
+    </div>
+      <!--</div> for form
+
       <div class="loginbox">
         <img src="../static/images/avatar.png" class="avatar" />
         <h1>Login Here</h1>
@@ -54,7 +78,7 @@
           {% csrf_token %} {% if messages%} {% for message in messages %}
           <h3 style="color: white">{{message}}</h3>
           {% endfor %} {% endif %}
-          <!--        <label for="username">Username</label>-->
+                 <label for="username">Username</label>
           <input
             id="email"
             name="email"
@@ -62,7 +86,7 @@
             placeholder="Enter email"
             required
           />
-          <!--<label for="password">Password</label>-->
+          <label for="password">Password</label>
           <input
             id="password"
             name="password"
@@ -80,7 +104,7 @@
         <p class="para-2">Email -- > test@gmail.com</p>
         <p class="para-2">Password -- > bharatpro1</p>
 
-        <!--form ends-->
+        form ends-->
       </div>
     </div>
     <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
