--- a/quiz_project/templates/Login.html
+++ b/quiz_project/templates/Login.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Login Form Design</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
     <body>
       <div class="loginbox">
         <img src="../static/images/avatar.png" class="avatar" />
