--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -54,7 +54,7 @@
   <h3 style="color:white;">{{message}}</h3>
  {% endfor %}
   {% endif %}
- <label for="username">Username</label>
+ <label for="email">Username</label>
   <input id="email"  name="email" type="email" placeholder="Enter email" required>
 <label for="password">Password</label>
   <input id="password"  name="password" type="password" placeholder="Enter password" required>
@@ -62,8 +62,8 @@
   <a href="#">Lost your password?</a><br>
 </form>
 <p class="para-2">Not have an account? <a href="{% url 'sign-up' %}">Sign Up Here</a></p>
-<p class="para-2">Email -- > test1@gmail.com</p>
-<p class="para-2">Password -- > bharatpro1</p>
+<p class="para-2">Email -- > test@gmail.com</p>
+<p class="para-2">Password -- > bharatpro</p>
 </div>
 <!--form ends--->
         </div>
