again some changes

--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -45,24 +45,27 @@
         <div class="container">
           <div class="row">
             <div class="bgimg">
-              <img src="../static/images/home2.jpg">
-              <h1 class="heading">" The REAL TEST of a HUMAN is NOT what HE KNOWS ,<br>BUT it is....<br>what HE
-                  LEARNS "
-                  <br>
-                  <ion-icon name="star-outline"></ion-icon>
-                  <ion-icon name="star-outline"></ion-icon>
-                  <ion-icon name="star-outline"></ion-icon>
-                  <ion-icon name="star-outline"></ion-icon>
-                  </h1>
+              <img src="../static/images/home2.jpg" />
+              <h1 class="heading">
+                <i
+                  >" The REAL TEST of a HUMAN is NOT what WE KNOW ,<br />BUT it
+                  is....<br />what WE LEARN " </i
+                ><br />
+                <ion-icon name="star-outline"></ion-icon>
+                <ion-icon name="star-outline"></ion-icon>
+                <ion-icon name="star-outline"></ion-icon>
+                <ion-icon name="star-outline"></ion-icon>
+              </h1>
             </div>
-          </div>  
-          <button class="btn"><a href="login.html">
-           LOGIN
-            </a></button>
+          </div>
+          <button class="btn"><a href="login.html"> LOGIN </a></button>
         </div>
-  
-    <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
+
+        <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
+      </div>
+    </div>
   </body>
+
   <!--footer starts---->
   <footer>
     <!--<div class="splash">
