--- a/quiz_project/static/css/style.css
+++ b/quiz_project/static/css/style.css
@@ -82,11 +82,11 @@ nav a:hover {
   font-size: 30px;
   display: none;
 }
-/* .bgimg {
+.bgimg {
   position: relative;
   width: 100%;
   height: 100%;
-} */
+}
 .bgimg img {
   width: 1350px;
   height: 780px;
@@ -99,8 +99,8 @@ nav a:hover {
   color: #e8f8f5;
   position: absolute;
   top: 200px;
-  text-align: center;
   left: 250px;
+  text-align: center;
   font-size: 30px;
   letter-spacing: 0.1em;
   text-shadow: 0 0 10px #e21d7c, 0 0 20px #e9539c, 0 0 40px #e9539c,
@@ -314,7 +314,7 @@ p {
 }
 
 footer {
-  margin-top: 220px;
+  margin-top: 0px;
   position: absolute;
   width: 100%;
   background: #3498db;
